--- a/src/index.html
+++ b/src/index.html
@@ -6,28 +6,106 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/lib/diagramming/jquery.jsPlumb-1.5.2.js"></script>
+
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!--<script type="text/javascript" src="../dist/dagre.min.js"></script>-->
     <script type="text/javascript" src="js/lib/diagramming/dagre.js"></script>
     <script type="text/javascript" src="./js/dagre-layout.js"></script>
+
+    <script src="../demo/dagre-d3-simple.js"></script>
     <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../demo/dagre-d3-simple.css">
 </head>
 
 
 <body>
 
-<div id="jsPlumb-container" style="width: 100%; height: 700px">
-    <div id="node0" class="node" style="background: red;">0</div>
-    <div id="node1" class="node" style="background: green;">1</div>
-    <div id="node2" class="node" style="background: yellow;">2</div>
-    <div id="node3" class="node" style="background: black;">3</div>
 
-    <div id="nested-nodes" class="nested">
-        <div class="header" style="height:20px;background-color:blue;">header</div>
-        <div id="node4" class="node" style="background: black;">4</div>
-        <div id="node5" class="node" style="background: black;">5</div>
-    </div>
+//https://github.com/cpettitt/dagre/issues/42
 
-    <!--<div id="node6" class="node" style="background: black;">6</div>-->
+<!--<div id="jsPlumb-container" style="width: 100%; height: 700px">-->
+    <!--&lt;!&ndash;<div id="node0" class="jsplumb-node" style="background: red;">0</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;<div id="node1" class="jsplumb-node" style="background: green;">1</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;<div id="node2" class="jsplumb-node" style="background: yellow;">2</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;<div id="node3" class="jsplumb-node" style="background: black;">3</div>&ndash;&gt;-->
+
+    <!--<div id="nested-nodes" class="nested">-->
+        <!--<div class="header" style="height:20px;background-color:blue;">header</div>-->
+        <!--&lt;!&ndash;<div id="node4" class="jsplumb-node" style="background: black;">4</div>&ndash;&gt;-->
+        <!--<div id="node5" class="jsplumb-node" style="background: black;">5</div>-->
+    <!--</div>-->
+
+    <!--&lt;!&ndash;<div id="node6" class="jsplumb-node" style="background: black;">6</div>&ndash;&gt;-->
+<!--</div>-->
+
+
+        <div id="node1" style="width: 290px; height: 40px;" class="window">
+            <b>NODE </b>
+        </div>
+
+<div id="node1" style="width: 290px; height: 40px;" class="window">
+    <b>NODE </b>
 </div>
+<div id="node1" style="width: 290px; height: 40px;" class="window">
+    <b>NODE </b>
+</div>
+<div id="node1" style="width: 290px; height: 40px;" class="window">
+    <b>NODE </b>
+</div>
+
+        <script type="text/javascript">
+            jsPlumb.connect({
+                source: $("##{edge.source.id}"),
+                target: $("##{edge.target.id}"),
+                paintStyle:{lineWidth:1, strokeStyle: '#555', dashstyle: "16 0"},
+                anchors:["Continuous", "Continuous"],
+                endpoint:"Blank",
+                connector: "Straight"
+            });
+        </script>
+
+
+
+
+
+<script type="text/javascript">
+    $(function() {
+        initDagrePlumb();
+        function initDagrePlumb() {
+            var nodes = new Array();
+            $.each($(".window"), function(name, obj) {
+                obj.width = 350;
+                obj.height = 180;
+                nodes[name] = obj;
+                jsPlumb.draggable(obj);
+            });
+
+            var edges = new Array();
+            var i = 0;
+            jsPlumb.select().each(function(connection) {
+                var edge = new Object();
+                edge.source = connection.target[0];
+                edge.target = connection.source[0];
+                edge.label = "";
+                edges[i++] = edge;
+            });
+
+            dagre.layout()
+                    .nodes(nodes)
+                    .edges(edges)
+                    .run();
+
+            $.each(nodes, function(name, obj) {
+                $("#"+obj.id).css({"left": obj.dagre.x + 150});
+                $("#"+obj.id).css({"top": obj.dagre.y});
+            });
+
+            jsPlumb.repaintEverything();
+        }
+    });
+
+
+</script>
 
 
 </body>
